# smufl

./: .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: main.yml
scripts/: gen-glyphs.sh  gen-readme.sh
smufl/: Cargo.toml
smufl-gen/: Cargo.toml
smufl-gen/src/: generator.rs  glyph.rs  main.rs
smufl/src/: anchors.rs  bounding_box.rs  coord.rs  engraving_defaults.rs  glyph.rs  glyph_data.rs  glyph_or_unknown.rs  lib.rs  metadata.rs  staff_spaces.rs
src/: glyph.rs  lib.rs
