[package]
name = "smufl"
version = "0.2.1"
authors = ["Peter Stuart <peter@peterstuart.org>" ]
edition = "2021"
license = "MIT"
keywords = ["music", "font"]
description = "Parse SMuFL (Standard Music Font Layout) metadata."
homepage = "https://github.com/peterstuart/smufl/"
repository = "https://github.com/peterstuart/smufl/"
exclude = [".github", "scripts", "submodules", "*.snap"]

[dependencies]
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.89"
codegen = "0.2.0"
convert_case = "0.6.0"
insta = { version = "1.40.0", features = ["ron"] }
once_cell = "1.19.0"
regex = "1.11.0"
rstest = { version = "0.22.0", default_features = false }
similar-asserts = "1.6.0"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.dev.package.similar-asserts]
opt-level = 3