[package]
name = "smufl-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
codegen = "0.2.0"
convert_case = "0.6.0"
once_cell = "1.17.1"
regex = "1.7.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"

[dev-dependencies]
rstest = { version = "0.17.0", default_features = false }
similar-asserts = "1.4.2"
