[package]
name = "smufl"
version = "0.2.0"
authors = ["Peter Stuart <peter@peterstuart.org>" ]
edition = "2021"
license = "MIT"
keywords = ["music", "font"]
description = "Parse SMuFL (Standard Music Font Layout) metadata."
homepage = "https://github.com/peterstuart/smufl/"
repository = "https://github.com/peterstuart/smufl/"

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.66"
rstest = { version = "0.16.0", default_features = false }
